--- a/proyecto2/blockpost.html
+++ b/proyecto2/blockpost.html
@@ -13,6 +13,7 @@
                 Este es el titulo atractivo e interesante del post
             </h1>
             <p> y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se puede hacer con ramas</p>
+            <p> los blogs son la mejor fomra de compartir información y tus ideas. </p>
         </div>
     </div>
 </body>
