--- a/proyecto2/blockpost.html
+++ b/proyecto2/blockpost.html
@@ -9,7 +9,7 @@
     <div id="container">
         <div id="cabecera">
             Hiperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog de Cabecera</span>
         </div>
         <div id="post">
             <h1>
