cambio de master tecto cabecera, cambio color texto y agregue parrafp

--- a/proyecto2/blockpost.html
+++ b/proyecto2/blockpost.html
@@ -9,7 +9,7 @@
     <div id="container">
         <div id="cabecera">
             Hiperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog de Maestro</span>
         </div>
         <div id="post">
             <h1>
@@ -17,6 +17,7 @@
             </h1>
             <p> y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se puede hacer con ramas</p>
             <p> los blogs son la mejor fomra de compartir información y tus ideas. </p>
+            <p>! suscribete y dale Like¡¡</p>
         </div>
     </div>
 </body>
