--- a/proyecto2/blockpost.html
+++ b/proyecto2/blockpost.html
@@ -17,6 +17,7 @@
             </h1>
             <p> y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se puede hacer con ramas</p>
             <p> los blogs son la mejor fomra de compartir información y tus ideas. </p>
+            <p> agrego rama cabecera !!!!</p>
             <p>! suscribete y dale Like¡¡</p>
         </div>
     </div>
