--- a/proyecto2/blockpost.html
+++ b/proyecto2/blockpost.html
@@ -8,7 +8,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hiperblog
+            <img id="logo" src="imagenes/cohete.png" /> Hiperblog
             <span id="tagline">Tu blog de aprendizaje </span>
         </div>
         <div id="post">
@@ -16,9 +16,10 @@
                 Este es el titulo atractivo e interesante del post
             </h1>
             <p> y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se puede hacer con ramas</p>
-            <p> los blogs son la mejor fomra de compartir información y tus ideas. </p>
+            <p> los blogs son la mejor forma de compartir información y tus ideas. </p>
             <p> agrego rama cabecera !!!!</p>
             <p>! suscribete y dale Like¡¡</p>
+            <p> ocasión, saxofon, ejecución de programas, ñññ</p>
         </div>
     </div>
 </body>
