--- a/proyecto2/blockpost.html
+++ b/proyecto2/blockpost.html
@@ -1,27 +1,28 @@
-<html>
+<htmllang="es">
 
-<head>
-    <title>Bienvenidos al Blog 2.0 </title>
-    <link rel="stylesheet" href="css/estilos.css" />
-</head>
+    <head>
+        <metacharset="UTF-8">
+            <title>Bienvenidos al Blog 2.0 </title>
+            <link rel="stylesheet" href="css/estilos.css" />
+    </head>
 
-<body>
-    <div id="container">
-        <div id="cabecera">
-            <img id="logo" src="imagenes/cohete.png" /> Hiperblog
-            <span id="tagline">Tu blog de aprendizaje </span>
+    <body>
+        <div id="container">
+            <div id="cabecera">
+                <img id="logo" src="imagenes/cohete.png" /> Hiperblog
+                <span id="tagline">Tu blog de aprendizaje </span>
+            </div>
+            <div id="post">
+                <h1>
+                    Este es el titulo atractivo e interesante del post
+                </h1>
+                <p> y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se puede hacer con ramas</p>
+                <p> los blogs son la mejor forma de compartir información y tus ideas. </p>
+                <p> agrego rama cabecera !!!!</p>
+                <p>! suscribete y dale Like¡¡</p>
+                <p> ocasión, saxofon, ejecución de programas, ñññ, 😎</p>
+            </div>
         </div>
-        <div id="post">
-            <h1>
-                Este es el titulo atractivo e interesante del post
-            </h1>
-            <p> y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se puede hacer con ramas</p>
-            <p> los blogs son la mejor forma de compartir información y tus ideas. </p>
-            <p> agrego rama cabecera !!!!</p>
-            <p>! suscribete y dale Like¡¡</p>
-            <p> ocasión, saxofon, ejecución de programas, ñññ</p>
-        </div>
-    </div>
-</body>
+    </body>
 
-</html>
+    </html>
