cambio de mensaje en pagina
hecho mensaje en pc alexa

--- a/proyecto2/blockpost.html
+++ b/proyecto2/blockpost.html
@@ -20,6 +20,9 @@
             <p> agrego rama cabecera !!!!</p>
             <p>! suscribete y dale Like¡¡</p>
         </div>
+        <div id= "footer"> 
+            hecho por Pc de Alexa
+        </div>
     </div>
 </body>
 
