--- a/proyecto2/blockpost.html
+++ b/proyecto2/blockpost.html
@@ -14,13 +14,13 @@
             </div>
             <div id="post">
                 <h1>
-                    Este es el titulo atractivo e interesante del post
+                    Este es el título atractivo e interesante del post
                 </h1>
-                <p> y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se puede hacer con ramas</p>
+                <p> > y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se puede hacer con ramas</p>
                 <p> los blogs son la mejor forma de compartir información y tus ideas. </p>
                 <p> agrego rama cabecera !!!!</p>
-                <p>! suscribete y dale Like¡¡</p>
-                <p> ocasión, saxofon, ejecución de programas, ñññ, 😎</p>
+                <p>! suscríbete y dale Like¡¡</p>
+                <p> ocasión, saxófon, ejecución de programas, ñññ, 😎</p>
             </div>
             <div id="footer">
                 hecho por Pc de Alexa
