--- a/proyecto2/blockpost.html
+++ b/proyecto2/blockpost.html
@@ -16,7 +16,8 @@
                 <h1>
                     Este es el título atractivo e interesante del post
                 </h1>
-                <p> > y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se puede hacer con ramas</p>
+                <p> y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se puede hacer con ramas</p>
+                <p><img src="imagenes/billetes.jpg" width="100%"></p>
                 <p> los blogs son la mejor forma de compartir información y tus ideas. </p>
                 <p> agrego rama cabecera !!!!</p>
                 <p>! suscríbete y dale Like¡¡</p>
